--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -70,15 +70,14 @@ t'_i = t_{min} + ( t_{max} - t_{min} )\frac{ 1 - e^{ - \omega i } }{ 1 - e^{ - \
 
 This means, near the critical time the time go faster, the ''true'' time periods are wider than it was measured, and in another side of obervation period it should instead be shorter, ... to keep an overall match to a given time scale. 
 
+\newpage
+
 \noindent
-{\large{\textbf{A}}}\\
-\includegraphics[width=0.8\textwidth]{fig_methods_usc18.png}\\
+\includegraphics[width=0.8\textwidth]{fig_2a.png}\\
+\includegraphics[width=0.8\textwidth]{fig_2b.png}\\
+\includegraphics[width=0.8\textwidth]{fig_2c.png}\\
 \vskip 12pt
-\noindent
-{\large{\textbf{B}}}\\
-\includegraphics[width=0.8\textwidth]{fig_methods_acrim3.png}\\
-\vskip 12pt
-Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1A (B) Periodic bursts - chart in fig 1B, two parts, 2000 to 2009 and ..., in separate.}
+Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1A (B) Periodic bursts - chart in fig 1B, two parts, 2000 to 2009 and ..., in separate. (C) ...}
 \vskip 12pt
 
 
