--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -77,7 +77,7 @@ This means, near the critical time the time go faster, the ''true'' time periods
 \includegraphics[width=0.8\textwidth]{fig_2b.png}\\
 \includegraphics[width=0.8\textwidth]{fig_2c.png}\\
 \vskip 12pt
-Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1A (B) Periodic bursts - chart in fig 1B, two parts, 2000 to 2009 and ..., in separate. (C) ...}
+Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1 A (B) Periodic bursts - chart in fig 1 B, two parts, 2000 to 2009 and ..., in separate. (C) ...}
 \vskip 12pt
 
 
@@ -100,43 +100,39 @@ Figure 4 \textit{Temperature of water in Baikal, (A) - series from May 2010 to O
 
 \section*{Results}
 
+\textit{Consistency}
+
 \includegraphics[width=0.49\textwidth]{fig_results_baikal.png}
 \includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
 Figure 5 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
 
-\textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig.2, and of 01.04.2018 as in fig1B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
+\textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig. 1 C, and of 01.04.2018 as in fig 1 B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
 
-That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 5A) to a change of time period.
+That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 5 A) to a change of time period.
 
 \newpage
 
+\textit{}
+\vskip 12pt
+
+\includegraphics[width=0.99\textwidth]{fig_6a.png}\\
+\includegraphics[width=0.99\textwidth]{fig_6b.png}\\
+Figure 6 \textit{Fitting of log-periodicity in separated time periods.}
+
+%That is, for data in fig 6 A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 6 D for solar activity. 
+
+\newpage
+
+%\section*{Conclusions}
+
+%The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 6 A). 
+
+%If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 7 B), this can point out to expectations of universe-scale crisis in a near future.
 
 \vskip 12pt
 
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_explained.png}\\
-Figure 6 \textit{Fitting of log-periodicity. Explanation.}
-
-\newpage
-
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_baikal.png}\\
-
-\includegraphics[width=0.99\textwidth]{fig_heatmaps_solar.png}\\
-Figure 7 \textit{Fitting of log-periodicity in separated time periods. Parameters are systematicale listed in table 2.}
-
-That is, for data in fig 7A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 7D for solar activity. 
-
-\newpage
-
-\section*{Conclusions}
-
-The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 8 A). 
-
-If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 8 B), this can point out to expectations of universe-scale crisis in a near future.
-
-\vskip 12pt
-
-\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
-Figure 8 \textit{Concluding drawing.}
+%\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
+%Figure 7 \textit{Concluding drawing.}
 
 \section*{References}
 
@@ -153,84 +149,8 @@ Figure 8 \textit{Concluding drawing.}
 \end{enumerate}
 
 \newpage
+
 \section*{Appendix A}
-
-Table 1 \textit{Supplement to figure 2 - results of fitting of log-periodicity in log-log distributions}
-\vskip 12pt
-
-{\small{
-
-\begin{tabular}{cccccccccc}
-\hline
-             & usc\_18        &           & acrim3-1  &           & acrim3-2   &           \\
-             & method 1       & method 2  &           &           &            &           \\
-\hline
-plain: \\
-dimension     & 0.577973      & 0.579382  & 0.624222  & 0.667683  & 0.4569474  & 0.477499  \\
-correlation   & 0.983925      & 0.969044  & 0.97411   & 0.958568  & 0.94348    & 0.922355  \\
-\hline
-fit in full: \\ 
-direction     & accel.        & accel.    & accel.    & accel.    & deccel.    & deccel.   \\
-critical time & +28           & +94       & +63       & +13       & -19        & -63       \\
-dimension     & 0.697891      & 0.621803  & 0.785739  & 0.865593  & 0.706591   & 0.687815 \\
-correlation   & 0.991618      & 0.978947  & 0.998469  & 0.996726  & 0.99833    & 0.990325 \\
-\hline
-fit in part: \\
-direction     & accel.        & accel.    & accel.    & accel.    & deccel.   & accel.    \\
-critical time & +3            & +94       & +474      & +13       & -314      & +711      \\
-dimension     & 0.66833       & 0.65472   & 0.7813    & 0.908882  & 0.710503  & 0.703412  \\
-correlation   & 0.993703      & 0.972722  & 0.996467  & 0.995446  & 0.9983497 & 0.995904  \\
-\hline
-\end{tabular}
-
-}}
-
-
-\vskip 12pt
-
-Table 2 \textit{}
-
-\small{
-
-\begin{tabular}{cllll}
-\hline
-                               & \textit{method 1}        &             & \textit{method 2}        &             \\
-                               & dimension                & correlation & dimension                & correlation \\
-\hline 
-Solar activity,\\
-\textit{total}, 1-10 t.p.\\
-period 1, at a whole           & 0.611359                 & -0.98176    & -0.98176                 & -0.992606   \\
-period 1, split to 10 parts    & 0.620717 $\pm$ 0.0686381 &             & 0.633088 $\pm$ 0.117143  &             \\
-period 2, at a whole           & 0.582742                 & -0.980571   & 0.56841                  & -0.987462   \\
-period 2, split to 10 parts    & 0.577533 $\pm$ 0.0646417 &             & 0.57153  $\pm$ 0.0621609 &             \\
-period 3, at a whole           & 0.529598                 & -0.98341    & 0.940431                 & -0.961894   \\
-period 3, split to 10 parts    & 0.543816 $\pm$ 0.117594  &             & 0.674605 $\pm$ 0.273296  &             \\
-\textit{MnII intensity},\\
-1...10 t.p., at a whole        & 0.349931                 & -0.975307   & 0.439804                 & -0.942881   \\
-1...10 t.p, split to 10 parts  & 0.345247 $\pm$ 0.102797  &             & 0.35548 $\pm$ 0.195736   &             \\
-1...max t.p., at a whole       & 0.531589                 & -0.960948   & 0.560595                 & -0.930574   \\
-1...max t.p, split to 10 parts & 0.679449 $\pm$ 0.0622246 &             & 0.774685 $\pm$ 0.109925  &             \\
-\hline
-Temperature in Baikal\\
-\textit{long series}; 1...10 t.p.\\
-period 1, at a whole           & 0.570939                 & -0.992162   & 0.812175                 & -0.995154   \\
-period 1, split to 10 parts    & 0.613501 $\pm$ 0.126926  &             & 0.868055 $\pm$ 0.177196  &             \\
-period 2, at a whole           & 0.532256                 & -0.991045   & 0.739015                 & -0.994156   \\
-period 2, split to 10 parts    & 0.633994 $\pm$ 0.217527  &             & 0.876311 $\pm$ 0.29755   &             \\
-period 3, at a whole           & 0.303322                 & -0.99865    & 0.385959                 & -0.995293   \\
-period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.467551 $\pm$ 0.320929  &             \\
-\textit{short series}\\
-1...80 t.p., at a whole        & 0.606348                 & -0.995202   & 0.662082                 & -0.988346   \\
-1...80 t.p., split to 10 parts & 0.564113 $\pm$ 0.164664  &             & 0.628443 $\pm$ 0.215225  &             \\
-40...80 t.p., at a whole       & 0.508056                 & -0.981986   & 0.507846                 & -0.99867   \\
-40...80 t.p, split to 10 parts & 0.425593 $\pm$ 0.28323   &             & 0.444415 $\pm$ 0.282211  &             \\
-\hline
-\end{tabular}
-}
-
-
-\newpage
-\section*{Appendix B}
 
 
 \texttt{\small{ cat usc\_18.txt | awk -v i=0 -v b1=2458119.5 -v b13=7 '\{ if ( i == 100 \&\& substr( \$13, 1, 1 ) != "0" ) \{ s = s "," 10 * ( \$1 - b1 ) "," 500 * (substr(\$13,1,7) - b13 ); i = 0; \}; i = i+1; \} END \{ print substr( s, 2 ) \}' | ./fractal\_dimension -d\_xy }}
@@ -239,14 +159,25 @@ period 3, split to 10 parts    & 0.364181 $\pm$ 0.227035  &             & 0.4675
 
 %echo "$s_beg" >../figure_sources/fig_baikal_shortseries.html;cat ../data_files/baikal_shortseries.txt | while read line; do a1=${line:0:10};a2=${line:11:5};n1=`echo "($a1-$d_beg)*0.00001" | bc`;n2=`echo "$a2*10" | bc`; s="+\" $n1,$n2\""; echo "$s" >>../figure_sources/fig_baikal_shortseries.html; done; echo "$s_end" >>../figure_sources/fig_baikal_shortseries.html;
 
-% head -c 30710 ../data_files/acrim3_data.txt; tail -c 33827 ../data_files/acrim3_data.txt
+\texttt{\small{ head -c 30710 ../dat\_files/acrim3\_data.txt; tail -c 33827 ../data\_files/acrim3\_data.txt } }
 
-%head -n 525252 ../data_files/baikal_longseries.txt |   awk -F ',' '{ print ($1-1262293200)*0.000001 "," $2 }'
-%head -n 1222863 ../data_files/baikal_longseries.txt | tail -n $((1222863-718437))  |  awk -F ',' '{ print ($1-1367352120)*0.000001 "," $2 }'
-%tail -n $((1575756-1222863)) ../data_files/baikal_longseries.txt |  awk -F ',' '{ print ($1-1430427720)*0.000001 "," $2 }'
-%cat ../data_files/baikal_shortseries.txt |   awk -F ',' '{ print ($1-1496172600)*0.000001 "," $2 }'
+\texttt{\small{ head -n 525252 ../data\_files/baikal\_longseries.txt |   awk -F ',' '\{ print (\$1-1262293200)*0.000001 "," \$2 \}' } }
 
-%for cmd in './fractal_dimension -lh -v -max 10 -linincr' './fractal_dimension -lh -v -max 1000' './fractal_dimension -lh -v'; do echo "["; cat ../data_files/lin_tsi.txt | bash -c "$cmd" | head -n 38 | tail -n 36; echo "],"; done;
+\texttt{\small{ head -n 1222863 ../data\_files/baikal\_longseries.txt | tail -n 504426 |  awk -F ',' '\{ print (\$1-1367352120)*0.000001 "," \$2 \}' } }
+
+\texttt{\small{ tail -n 352893 ../data\_files/baikal\_longseries.txt |  awk -F ',' '\{ print (\$1-1430427720)*0.000001 "," \$2 \}' } }
+
+\texttt{\small{ cat ../data\_files/baikal\_shortseries.txt |  awk -F ',' '\{ print (\$1-1496172600)*0.000001 "," \$2 \}' } }
+
+\texttt{\small{ head -n 45 ../data\_files/lin\_tsi\_xy.txt } }
+
+\texttt{\small{ head -n 90 ../data\_files/lin\_tsi\_xy.txt | tail -n 45 } }
+
+\texttt{\small{ tail -n 47 ../data\_files/lin\_tsi\_xy.txt } }
+
+\texttt{\small{ for cmd1 in 'head -n 45 ../data\_files/lin\_tsi\_xy.txt' 'head -n 90 ../data\_files/lin\_tsi\_xy.txt | tail -n 45' 'tail -n 47 ../data\_files/lin\_tsi\_xy.txt'; do for cmd2 in './fractal\_dimension -lh -v -max 10 -linincr -xy' './fractal\_dimension -lp -v -max 10 -xy'; do bash -c "\$cmd1" | bash -c "\$cmd2"; done; done; } }
+
+\texttt{\small{ for pset in '-max 10 -linincr' '-max 1000'; do for cmd in 'cat ../data\_files/lin\_mn.txt | ../workspace/fractal\_dimension -lh -v -xy' 'cat ../data\_files/lin\_mn.txt | ../workspace/fractal\_dimension -lp -v -xy'; do bash -c "\$cmd \$pset"; done; done; } }
 
 %head -n 525252 ../data_files/baikal_longseries.txt |  awk -F "," '{ print (1367352120-$1)*0.000001*(log(2+(1367352120-$1)/(86400*365))/(log(4)-log(2))) "," $2 }' | ./fractal_dimension -hm -v -xy
 %cat ../data_files/lin_mn.txt | awk -F "," '{ for ( i=1; i <= NF; i+= 2 ) { print (365*(36-$i/365)*log(36-$i/365)/log(10)) "," $(i+1); } }' | ./fractal_dimension -hm -v -xy
