--- a/logperiodic_acceleration.tex
+++ b/logperiodic_acceleration.tex
@@ -6,28 +6,41 @@
 \begin{center}
 {\large{Features of Log-periodic Acceleration in Fluctuations of Sun Irradiation.}}
 \vskip 12pt
+Sergey Feranchuk, \\
+{\small{
+\textit{Smolensk State University,}\\
+feranchuk@gmail.com }}
 \end{center}
 
-Sergey Feranchuk, Smolensk State University, feranchuk@gmail.com
+\begin{flushright}
+{\textit{to my father}}
+\end{flushright}
 
 \section*{Abstract}
 
-\textit{Background.} Level of Sun irradiation continously changes at any scale of time; some features of self-affinity are anyway expected there. ''Ideal'' self-affinity imply a presence of a linear dependence between a scale of fluctuations and a scale of time; a slope of that line is a value of ''fractal dimension''. The ''scale-vs.-scale'' distributions for the fluctuations of Sun irradiation are not linear, a slope of the fitting line depends on time and a diapason of scales. 
+\textit{Background.} Level of Sun irradiation continously changes at any scale of time; some features of self-affinity are anyway expected there. ''Ideal'' self-affinity imply a presence of a linear dependence between a scale of fluctuations and a scale of time; a slope of that line is a value of ''fractal dimension''. 
+%The ''scale-vs.-scale'' distributions for the fluctuations of Sun irradiation are not linear, a slope of the fitting line depends on time and a diapason of scales. 
 
-Chaotic processes like the burning of Sun are anyway characterized, also, by a presence of some slow-scale oscillations and sudden outbreaks. A property of log-periodicity is another side of ''fractal''-like distributions, it can be applied to describe these oscillations, and it imply either inceasing or decreasing of their periodicity. Increased periodicity of chaotic outbreaks can warn about the approaching ''crash'', a ''phase transition'', a loss of any stability in an observed ''world''.
-
-\textit{Methods.}  A presence of log-periodic oscillations would influence a scale of time, and relative positions of sequential measurements along the axis of time.
-A scale distributions of Sun irradiation were compared for a couple of data sources, a presence of log-periodicity was approached trying to guess a best fit of the linear dependency for data points with modified time-axis positions. The approach was comparatively applied to fluctuations of water temperature in Baikal, were a crisis happened in around 2014. 
-
-\textit{Results.} In early period before the crisis in Baikal, between 2010 and 2012, the scale diastribution for water temperature within a range from hours to several days looks different than in later another periods, and the attempts to apply the law of log-periodicity to this distribution appear to be ... . The same ... for the fluctuations of MgII Sun irradiation between 1978 and 2004.
-
-\textit{Conclusion}
+\vskip 6pt
+\noindent
+Chaotic processes 
+%like the burning of Sun 
+are anyway characterized, also, by a presence of some slow-scale oscillations and sudden outbreaks. A property of log-periodicity is another side of ''fractal''-like distributions, it can arise in any of these oscillations, and it imply either inceasing or decreasing of their periodicity. Increased periodicity of chaotic outbreaks can warn about the approaching ''crash'', a ''phase transition'', a loss of any stability in an observed ''world''.
+\vskip 6pt
+\noindent
+\textit{Methods.}  A presence of log-periodic oscillations would influence a scale of time, and, consequently, relative positions of sequential measurements along the axis of time. A presence of log-periodicity was approached trying to guess a best fit of the linear dependency for data points with modified time-axis positions, and with unform time axis. The approach was applied to distributions of Sun irradiation from several data sources, and to fluctuations of water temperature in Baikal, were a crisis happened in around 2014. 
+\vskip 6pt
+\noindent
+\textit{Results.} In the fluctuations of water temperature in Baikal, from around 2012, the guess a log-periodicity qualitatively points to the crisis events in the nearest past. In the fluctuations of Sun irradiation between 1978 and 2018, the same approach points to expectations of a crisis in the nearest future.
+\vskip 6pt
+\noindent
+\textit{Conclusion.} The proposed analysis of nearly stochastic events is grounded on solidly verified mathemtical constructions, just like elaborated attemts of weather forecats, and the results obtained this way are anyway worth to be shown.
 
 \newpage
 \section*{Introduction}
 
 The burning of Sun attracts attention of many physicists, and modern techniques of measurements are able to supply experimental data of various types. From the variety of approaches, two time series of measurements are shown in figure 1. Long-time observations are able to detect a presence of ''solar cycles'', regular changes of the burning intensity, 14-years cycle contributed the most to the variations of the intensity, as it can be seen in fig 1A. In the periods of instability, the burning of Sun is more ...
-
+\vskip 12pt
 \noindent
 {\large{\textbf{A}}} \hskip 0.57\textwidth {\large{\textbf{B}}}\\
 \includegraphics[width=0.59\textwidth]{fig_intro_acrim3.png}
@@ -35,7 +48,7 @@ The burning of Sun attracts attention of many physicists, and modern techniques 
 \vskip 12pt
 \noindent
 {\large{\textbf{C}}}\\
-\includegraphics[width=0.75\textwidth]{fig_intro_kva2002.png}\\
+\includegraphics[width=0.67\textwidth]{fig_intro_kva2002.png}\\
 \vskip 12pt
 Figure 1 \textit{(A) Radiation of Sun from 2000 to 2013 recorded by ''ACRIM3'' satellite; (B) Extracts form satellite data records of photon flux deposited in Univ. of South Carolina site, radiation of Sun in 2018; (C) Snapshot from video record of sun flaming 15.06.2002, deposited by Swedish physicists.\\ \small{in C,  digits in column - Higuchi fractal dimension for spatial axis, digits in row - approximation of fractal dimension for time axis.}}
 
@@ -43,10 +56,12 @@ The two approches are ... to measure the scale of fluctuations depending on a sc
 
 The generic linkage between ''fractal'' properties and a presence of log-periodicity was observed and described ... in part in theory, in part in some applied cases... [3].
 
-''Naive'' ways to observe some log-periodicity ... can point at most to an expected periodic ''burst'' ... some is demonstrated above in fig 1C.
+%''Naive'' ways to observe some log-periodicity ... can point at most to an expected periodic ''burst'' ... some is demonstrated above in fig 1C.
 %\newpage
 %\vskip 12pt
 %Figure 2 \textit{ }
+
+The approach of fractal theory was extensively explained in [4], in general and in application to ecological crisis in Baikal lake.
 
 \newpage
 \section*{Methods}
@@ -61,34 +76,35 @@ $t > t_c, f \sim \sin( \omega \log( t - t_c ) )$
 
 There, a critical time $t_c$ and a frequency of transformed oscillations $\omega$ are a minimal set of parameters for any log-periodicity. Peaks of this distribution which can be ... to outbreaks in an observed ''world'' are located at positions defined by expression $ 2 \pi i =  \omega \log( t_c - t_i ), i = 1, 2,  ..., n, ... $ (for a case $t < t_c$).
 
-Let the observed distribution is in bounds between $n_m$ and $n_M$ of the assumend log-periodicity, that is, $\omega \log( t_{max} - t_c )  = n_m, \omega \log( t_{min} - t_c ) = n_M$, or \textit{vice versa}. The period $\omega$ would be then $\omega = \log( n_M ) - \log( n_m ) $, transformation of time axis $t \to t'$ which put the position of peaks $t_i, i = 1 ... (n_M - n_m)$ into a uniform sequence can be written as follows:
+Let the observed distribution is in bounds between $n_m$ and $n_M$ of the assumend log-periodicity, that is, $\omega \log( t_{max} - t_c )  = n_m, \omega \log( t_{min} - t_c ) = n_M$, or \textit{vice versa}. The period $\omega$ would be then $\omega = \log( n_M ) - \log( n_m ) $, transformation of time axis $t \to t'$ which put the position of peaks $t_i, i = n_m ... n_M$ into a uniform sequence can be written as follows:
 
 \begin{eqnarray}
-t'_i = t_{max} - ( t_{max} - t_{min} )\frac{ 1 - e^{ - \omega i } }{ 1 - e^{ - \omega (n_M - n_m) } }, t < t_c; \nonumber\\
-t'_i = t_{min} + ( t_{max} - t_{min} )\frac{ 1 - e^{ - \omega i } }{ 1 - e^{ - \omega (n_M - n_m) } }, t > t_c. \\
+t'_i = t_{max} - ( t_{max} - t_{min} )\frac{ 1 - e^{ - \omega ( i - n_m ) } }{ 1 - e^{ - \omega (n_M - n_m) } }, t < t_c; \nonumber\\
+t'_i = t_{min} + ( t_{max} - t_{min} )\frac{ 1 - e^{ - \omega ( i - n_m ) } }{ 1 - e^{ - \omega (n_M - n_m) } }, t > t_c.
 \end{eqnarray}
 
 This means, near the critical time the time go faster, the ''true'' time periods are wider than it was measured, and in another side of obervation period it should instead be shorter, ... to keep an overall match to a given time scale. 
 
 \newpage
+If a scale-vs-scale chart is expected to be linear in a whole interval, the transformation of the time axis at large scales (1) would improve a qualiy of a linear fit. If a slope of a line depends on an interval of scales, some apropriate interval of scales can be chosen to apply a transformation of time axis.
 
 \noindent
 \includegraphics[width=0.8\textwidth]{fig_2a.png}\\
 \includegraphics[width=0.8\textwidth]{fig_2b.png}\\
 \includegraphics[width=0.8\textwidth]{fig_2c.png}\\
 \vskip 12pt
-Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1 A (B) Periodic bursts - chart in fig 1 B, two parts, 2000 to 2009 and ..., in separate. (C) ...}
+Figure 2 \textit{Illustrations of attempts to guess a presence of the log-periodic dependency (A) Uniform distribution - chart in fig. 1 A (B) Periodic bursts - chart in fig 1 B, two parts, 2000 to 2009 and 2009-2018 in separate. (C) Difference in correlation of least-square fit presented as ''heat map'' depending on a position of critical point of log-periodic dependency.}
 \vskip 12pt
 
 
 \newpage
 
-\textit{Input measurements}
+The input measurements of both types were either collected or pre-processed in Limnological institute in Irkutsk. Area of Listvyanka bay was a place where temperature detectors were installed, for both series of measurements. 
 
 \noindent
 \includegraphics[width=0.8\textwidth]{fig_lindata.png}\\
 \vskip 12pt
-Figure 3 \textit{(A) Total solar irradiation, November 1978 - September 2017; (B) MgII irradiation, November 1978 - November 2004.}
+Figure 3 \textit{(A) Total solar irradiation, November 1978 - September 2017; (B) MnII irradiation, November 1978 - November 2004.}
 \vskip 12pt
 \noindent
 \includegraphics[width=0.99\textwidth]{fig_baikal_longseries.png}\\
@@ -98,53 +114,66 @@ Figure 3 \textit{(A) Total solar irradiation, November 1978 - September 2017; (B
 \vskip 12pt
 Figure 4 \textit{Temperature of water in Baikal, (A) - series from May 2010 to October 2016, (B) - series from May 2017 to September 2018.}
 
+\newpage
 \section*{Results}
 
-\textit{Consistency}
+The measure of fractal dimension is consistent for mulitiple data sources and for varioous intervals of scales.
 
 \includegraphics[width=0.49\textwidth]{fig_results_baikal.png}
 \includegraphics[width=0.49\textwidth]{fig_results_solar.png}\\
-Figure 5 \textit{Log-log dependencies, for the two types of method. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
+Figure 5 \textit{Log-log scale-vs-scale dependencies, constructed by the two approaches. A,B: temperature in Baikal, A - 2010-2016, B - 2017-2018 period, C,D: solar activity, 1978-2017, E,F - fragments of auxiliary records on solar irradiation}
 
 \textit{\small{In A,D, three separate lines are the distributions for beginning, middle and ending parts of a period. Dashed lines in C, for a comparison - path lengths are estimated by the modified approach,  suitable to fitting of log-perodicity. In E,F, - time series are of 15.06.2002 as in fig. 1 C, and of 01.04.2018 as in fig 1 B, at average and in a few randomly choosed parts. Appropriate fragments from the long-time series, shown in fig 4 and here in C,D, are added for a comparison; numerical labels are estimated least-square slopes of regression lines.}}
 
-That is, the measure of fractal dimension is consistent for mulitiple data sources. And, the interval $s < 10$ is most sensitive (in fig 5 A) to a change of time period.
+\vskip 12pt
+The fitting of log-periodicity is possible for both types of approaches to a fractal dimension, the ''Higuchi-style'' approach (method 1), do provide more stable results. The interval $s < 10$ is most sensitive (in fig 5A) to a change of time period.
 
 \newpage
 
-\textit{}
+Difference of correlation is visible after a transformation of scale which corresponds to positive or negative location of critical time of a putative log-periodic dependency.
+
 \vskip 12pt
 
+\noindent
 \includegraphics[width=0.99\textwidth]{fig_6a.png}\\
+\noindent
 \includegraphics[width=0.99\textwidth]{fig_6b.png}\\
 Figure 6 \textit{Fitting of log-periodicity in separated time periods.}
 
-%That is, for data in fig 6 A, a trend to contraction to up-going crisis is observed in the first row. The same trend can be seen in fig 6 D for solar activity. 
+\textit{\small{Heat maps are rendered by ''Higuchi-style'' approach (method 1), as it was explained above in fig. 4. Main series of temperature measurements was rendered for the interval 1-10 time points, total irradiation was rendered for a whole (1-max) interval. Complementary sets 1,2 of time point sets are: (A) 1-80 t.p., 1-max; (B) 1-1000 t.p, 1-max. Supplementary results for method 2 are in appendix B}}
+
+\vskip 12pt
+That is, for data series in fig 6A, a trend to expansion from some crisis events is observed in the second and third rows. The opposite trend can be seen in fig 6B, in the first and second rows, for solar activity. 
 
 \newpage
 
-%\section*{Conclusions}
+\section*{Conclusions}
 
-%The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in two to four years before (fig 6 A). 
+The crisis on Baikal which began at around 2014 was possible to detect by slightly unusual variations of water temperature in the very beginning and just after it had happened, this was expressed in slighly better quality of fitting of the regression line after an appropriate scale transformation of time axis (fig 7A). 
 
-%If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 7 B), this can point out to expectations of universe-scale crisis in a near future.
+The opposite picture is observed for the fluctuations of Sun irradiation, it looks, with the same level of precision, that the very beginning of some crisis events had started in around 2018.
+
+
+%If a covid-19 is not an ordinary virus pandemy, to what extent is this extraaordiunarity expanded? 
+%The exclusive search gave similarity of ''projection'' to a model of log-periodic acceleration between variations of temperature in Baikal before crisis, and variations of intensity of solar irradiation in past 30 years (fig. 7 B), this can point out to expectations of universe-scale crisis in a near future.
 
 \vskip 12pt
 
-%\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
-%Figure 7 \textit{Concluding drawing.}
+\includegraphics[width=0.7\textwidth]{fig_conclusions.png}\\
+Figure 7 \textit{Concluding drawing. (A) The scale-vs-scale chart for fluctuations of temperature. (B) The scale-vs-scale chart for fluctuations of the solar irradiation, of the two types.}
 
+\newpage
 \section*{References}
 
 \begin{enumerate}
 
-\item Higuchi, \textit{Phys.Rev}, 19..
+\item Higuchi, T., Aproach to an irregular time series on the basis of the fractal theory \textit{Physica D}, 31:277-283, 1988.
 
-\item Peng C.-K., et al., Mosaic organization of DNA nucleotides, \textit{Phys.Rev.}, 1994.
+\item Peng C.-K., Buldyrev S.V., et al., Mosaic organization of DNA nucleotides, \textit{Phys.Rev. E} 49:1685-1689, 1994.
 
 \item Nottale, L., Scale relativity and fractal space-time: theory and applications, \textit{arxiv.org}, 2008
 
-\item Feranchuk, S., Belkova, N., et al. \textit{Limnology and Freshwater Biology}, 2018,
+\item Feranchuk, S., Potapova, U, et al. Microevolution processes are detected in symbiotic microbiomes of Baikal sponges by the methods of fractal theory, \textit{Limnology and Freshwater Biology}, 2:122-124, 2018,
 
 \end{enumerate}
 
@@ -152,6 +181,11 @@ Figure 6 \textit{Fitting of log-periodicity in separated time periods.}
 
 \section*{Appendix A}
 
+Console commands listed below are selected to get an idea about how to reproduce the results of the article.
+\vskip 12pt
+
+\noindent
+introductory figures:
 
 \texttt{\small{ cat usc\_18.txt | awk -v i=0 -v b1=2458119.5 -v b13=7 '\{ if ( i == 100 \&\& substr( \$13, 1, 1 ) != "0" ) \{ s = s "," 10 * ( \$1 - b1 ) "," 500 * (substr(\$13,1,7) - b13 ); i = 0; \}; i = i+1; \} END \{ print substr( s, 2 ) \}' | ./fractal\_dimension -d\_xy }}
 
@@ -160,6 +194,9 @@ Figure 6 \textit{Fitting of log-periodicity in separated time periods.}
 %echo "$s_beg" >../figure_sources/fig_baikal_shortseries.html;cat ../data_files/baikal_shortseries.txt | while read line; do a1=${line:0:10};a2=${line:11:5};n1=`echo "($a1-$d_beg)*0.00001" | bc`;n2=`echo "$a2*10" | bc`; s="+\" $n1,$n2\""; echo "$s" >>../figure_sources/fig_baikal_shortseries.html; done; echo "$s_end" >>../figure_sources/fig_baikal_shortseries.html;
 
 \texttt{\small{ head -c 30710 ../dat\_files/acrim3\_data.txt; tail -c 33827 ../data\_files/acrim3\_data.txt } }
+
+\noindent
+''heat maps'' in figure 6:
 
 \texttt{\small{ head -n 525252 ../data\_files/baikal\_longseries.txt |   awk -F ',' '\{ print (\$1-1262293200)*0.000001 "," \$2 \}' } }
 
@@ -177,9 +214,30 @@ Figure 6 \textit{Fitting of log-periodicity in separated time periods.}
 
 \texttt{\small{ for cmd1 in 'head -n 45 ../data\_files/lin\_tsi\_xy.txt' 'head -n 90 ../data\_files/lin\_tsi\_xy.txt | tail -n 45' 'tail -n 47 ../data\_files/lin\_tsi\_xy.txt'; do for cmd2 in './fractal\_dimension -lh -v -max 10 -linincr -xy' './fractal\_dimension -lp -v -max 10 -xy'; do bash -c "\$cmd1" | bash -c "\$cmd2"; done; done; } }
 
-\texttt{\small{ for pset in '-max 10 -linincr' '-max 1000'; do for cmd in 'cat ../data\_files/lin\_mn.txt | ../workspace/fractal\_dimension -lh -v -xy' 'cat ../data\_files/lin\_mn.txt | ../workspace/fractal\_dimension -lp -v -xy'; do bash -c "\$cmd \$pset"; done; done; } }
+\texttt{\small{ for pset in '-max 10 -linincr -xy -v' '-xy -v'; do for cmd in './fractal\_dimension -lh' './fractal\_dimension -lp'; do cat ../data\_files/lin\_mn.txt | bash -c "\$cmd \$pset"; done; done;  } }
 
-%head -n 525252 ../data_files/baikal_longseries.txt |  awk -F "," '{ print (1367352120-$1)*0.000001*(log(2+(1367352120-$1)/(86400*365))/(log(4)-log(2))) "," $2 }' | ./fractal_dimension -hm -v -xy
-%cat ../data_files/lin_mn.txt | awk -F "," '{ for ( i=1; i <= NF; i+= 2 ) { print (365*(36-$i/365)*log(36-$i/365)/log(10)) "," $(i+1); } }' | ./fractal_dimension -hm -v -xy
+\vskip 12pt
+\noindent
+concluding drawing:
+
+\texttt{\small{ head -n 1222863 ../data\_files/baikal\_longseries.txt | tail -n 504426 ../data\_files/baikal\_longseries.txt |  awk -F "," '\{ x\_pos=(\$1-1367352120)/(1430427720-1367352120); print 50 * x\_pos * (1-exp(-2*x\_pos))/( 1-exp(-2)) "," \$2 \}' | ./fractal\_dimension -hm -v -xy } }
+
+\texttt{\small{ head -n 45 ../data\_files/lin\_tsi\_xy.txt | awk -F "," '\{ for ( i = 1; i <= NF; i+= 2 ) \{ x\_pos=(600-\$i); print 600 - 600 * (1-x\_pos * exp(-2*x\_pos/600))/(1-exp(-2)) ","\$(i+1) \} \}' | ./fractal\_dimension -hm -xy -v } }
+
+\texttt{\small{ head -c 45001 ../data\_files/lin\_mn.txt | awk -F "," '\{ for ( i = 1; i <= NF; i+= 2 ) \{ x\_pos=(600-\$i); print 600 - 600 * (1-x\_pos * exp(-2*x\_pos/600))/(1-exp(-2)) ","\$(i+1) \} \}' | ./fractal\_dimension -hm -xy -v } }
+
+
+\newpage
+\section*{Appendix B}
+
+''Heat maps'' which present fitting of log-periodicidy to fluctuations of both water temperature and irradiation by method 2 (''Peng''-style approach).
+
+\noindent
+\includegraphics[width=0.99\textwidth]{fig_heatmaps_appendix.png}\\
+
+In left, main series of measurements (2010-2016) of water temperature, and the 1978-2018 series of total solar irradiation. In right, 2017-2018 series of temperature mesarements, and 1978-2004 sereies of MnII irradiation, for the two sets of time points.
+
+
+
 
 \end{document}
